# visual_behavior_analysis

./: .gitattributes  .gitignore  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  Makefile  Pipfile  README.md  build_bdist_wheel.sh  config.flake8  environment.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.sh  tox.ini
.bamboo/: build_whl.sh  run_tests.sh  setup_env.sh  setup_env_allensdk_head.sh  twine_upload.sh
.circleci/: config.yml
braintv_behav/: __init__.py  analyze.py  cohorts.py  data.py  devices.py  io.py  latest.py  masks.py  metrics.py  nwb.py  plotting.py  simulator.py  summary.py  utilities.py
braintv_pilot/: __init__.py  adaptive.py  cohorts.py  criteria.py  daily.py  data.py  latest.py  metrics.py  simulator.py  viewer.py
docs/: conf.py  contributing.rst  index.rst
integration/: Assets.Dockerfile  Makefile  Pipfile  README.md  integrator.py
notebooks/: 170105150329-task=DoC_MNIST_stage=0v1_probes_n=3_mouse=M258173.nwb  200708_create_metrics_array_for_clustering.ipynb  200709_create_metrics_array_for_clustering.ipynb  200713_create_metrics_array_for_clustering.ipynb  200901_get_data_for_decoding_analysis.html  200901_get_data_for_decoding_analysis.ipynb  200901_load_behavior_ophys_dataset.html  200928_get_data_for_decoding.html  200928_get_data_for_decoding.ipynb  201109_cell_matching_qc_plots.html  201109_cell_matching_qc_plots.ipynb  2016.10.19 - Modelling Strategy.ipynb  2016.10.26 - Cohort Dashboard.ipynb  2016.10.26 - Cohort Timing Analysis.ipynb  2017.01.13_PKL_to_NWB_Afternoon.ipynb  2020.05.04_lick_model_quantification_by_session_type.ipynb  2021.04.20_behavior_training_summary.ipynb  2021.04.27_cell_metrics_vs_model_performance.ipynb  2021.05.17_build_release_summary_table.ipynb  2021.05.17_save_csids_to_database.ipynb  210429_load_and_plot_cell_metrics-Copy1.ipynb  210429_load_and_plot_cell_metrics.html  210429_load_and_plot_cell_metrics.ipynb  210722_different_ways_to_get_ophys_experiment_table_explained.html  210722_different_ways_to_get_ophys_experiment_table_explained.ipynb  210926_loading_data_for_platform_paper_analysis.html  210926_loading_data_for_platform_paper_analysis.ipynb  210929_figure_2_population_avgs_with_different_filtering.html  210929_platform_paper_selection_criteria.html  210929_platform_paper_selection_criteria.ipynb  210929_population_average_for_dff_events_and_filtered_events_multiscope.html  210929_population_average_for_dff_events_and_filtered_events_multiscope.ipynb  211008_validate_filtering_criteria_and_check_exposure_number.html  211008_validate_filtering_criteria_and_check_exposure_number.ipynb  22.03.2021_load_ophys_data_example.ipynb  (+99 more)
(+656 files in other folders)
