[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-behavior"
version = "0.13.3"
description = "analysis package for visual behavior"
authors = [
    {name = "Marina Garrett", email = "marinag@alleninstitute.org"},
    {name = "Doug Ollerenshaw", email = "dougo@alleninstitute.org"},
]
urls = {homepage = "https://github.com/AllenInstitute/visual_behavior_analysis"}
dependencies = [
    "allensdk==2.16.2",
    "scikit-learn==1.5.0",
    "python-dateutil>=2.6.1",
    "scipy==1.10.1",
    "numpy==1.22.0",
    "zipfile36",
    "pymongo",
    "pyyaml",
    "opencv-python-headless",
    "dash",
    "plotly",
    "hdmf",
    "h5py",
    "umap-learn",
]

[project.optional-dependencies]
DEV = [
    "pytest",
    "bumpversion==0.5.3",
    "flake8",
    "pytest-cov",
    "pytest-html",
    "coverage",
    "markupsafe==2.0.1",
]
GLM = [
    "visual-behavior-glm @ git+https://github.com/AllenInstitute/visual_behavior_glm.git",
]

[tool.setuptools.packages.find]
where = ["."]
