[metadata]
name = visual-behavior
version = 0.13.1
description = "analysis package for visual behavior"
authors = ["Marina Garrett", "Doug Ollerenshaw"]
author_email="marinag@alleninstitute.org, dougo@alleninstitute.org",
url = "https://github.com/AllenInstitute/visual_behavior_analysis"

[options]
packages=find:
install_requires =
	allensdk>=2.11.3
	scikit-learn==0.24.2
	python-dateutil>=2.6.1
	zipfile36
	pymongo
	pyyaml
	opencv-python
	dash
	plotly
	hdmf<=2.4.0

[options.extras_require]
DEV =
    pytest
    bumpversion==0.5.3
    flake8
    pytest-cov
    pytest-html
    coverage
    markupsafe==2.0.1

[bumpversion]
current_version = 0.13.0
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<n>\d+))?
serialize = 
	{major}.{minor}.{patch}.{release}{n}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = gamma
values = 
	dev
	a
	b
	rc
	gamma

[bumpversion:part:n]

[bumpversion:file:visual_behavior/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[flake8]
ignore = E501, E201, E202, W503, E712, W504
exclude = git/*, notebooks/*, tests/*, scripts/*, *pilot_manuscript_figures.py,

[coverage:run]
omit = tests/*, visual_behavior/cohorts/*, visual_behavior/inscopix/*, scripts/*,
	notebooks/*, circleci/*, .git/*, .tox/*, .cache/*
